deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-shard-mutator
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongodb-shard-mutator
  template:
    metadata:
      labels:
        name: mongodb-shard-mutator
    spec:
      containers:
      - command: [ "/bin/bash", "-c", "--" ]
        args:
          - pip install flask && pip install jsonpatch && python /src/mutating_controller.py
        image: python:3
        name: mongodb-shard-mutator
        volumeMounts:
          - name: mutator-script
            mountPath: /src
          - name: tls-certs
            mountPath: /security
      volumes:
        - name: mutator-script
          configMap:
            name: mongodb-shard-mutator
        - name: tls-certs
          secret:
            secretName: mongodb-shard-mutator
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-shard-mutator
  namespace: mongodb
spec:
  selector:
    name: mongodb-shard-mutator
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mongodb-shard-mutator
  namespace: mongodb
webhooks:
  - name: mongodb-shard-mutator.jalder.dev
    failurePolicy: Ignore
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    namespaceSelector: {}
    objectSelector:
      matchLabels:
        controller: "mongodb-enterprise-operator"
    clientConfig:
      service:
        name: mongodb-shard-mutator
        namespace: mongodb
        path: "/mutate/shard-distribution"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyakNDQXNLZ0F3SUJBZ0lVV2tLWFJVcVhaZTczd091MzM3NlVjMVg0N3RFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZUXhJVEFmQmdOVkJBWVRHRlZ1YVhSbFpDQlRkR0YwWlhNZ2IyWWdRVzFsY21sallURVFNQTRHQTFVRQpDQk1IU1c1a2FXRnVZVEVTTUJBR0ExVUVCeE1KVEdGbVlYbGxkSFJsTVJBd0RnWURWUVFLRXdkTmIyNW5iMFJDCk1SSXdFQVlEVlFRTEV3bFVVMFVnUVd4a1pYSXhFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13SGhjTk1qRXcKTlRJMk1UZ3pPVEF3V2hjTk1qWXdOVEkxTVRnek9UQXdXakNCaERFaE1COEdBMVVFQmhNWVZXNXBkR1ZrSUZOMApZWFJsY3lCdlpp [...]
    rules:
      - apiGroups:
          - "*"
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
        scope: "*"
        
###Cert Authority
#LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyakNDQXNLZ0F3SUJBZ0lVV2tLWFJVcVhaZTczd091MzM3NlVjMVg0N3RFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZUXhJVEFmQmdOVkJBWVRHRlZ1YVhSbFpDQlRkR0YwWlhNZ2IyWWdRVzFsY21sallURVFNQTRHQTFVRQpDQk1IU1c1a2FXRnVZVEVTTUJBR0ExVUVCeE1KVEdGbVlYbGxkSFJsTVJBd0RnWURWUVFLRXdkTmIyNW5iMFJDCk1SSXdFQVlEVlFRTEV3bFVVMFVnUVd4a1pYSXhFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13SGhjTk1qRXcKTlRJMk1UZ3pPVEF3V2hjTk1qWXdOVEkxTVRnek9UQXdXakNCaERFaE1COEdBMVVFQmhNWVZXNXBkR1ZrSUZOMApZWFJsY3lCdlppQkJiV1Z5YVdOaE1 [...]
