deploy/deployment_sts_bonding.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sts-bond-mutator
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sts-bond-mutator
  template:
    metadata:
      labels:
        name: sts-bond-mutator
    spec:
      containers:
      - command: [ "/bin/bash", "-c", "--" ]
        args:
          - pip install flask && pip install jsonpatch && python /src/mutating_controller_sts_bonding.py
        image: python:3
        name: sts-bond-mutator
        volumeMounts:
          - name: mutator-script
            mountPath: /src
          - name: tls-certs
            mountPath: /security
      volumes:
        - name: mutator-script
          configMap:
            name: sts-bond-mutator
        - name: tls-certs
          secret:
            secretName: sts-bond-mutator
---
apiVersion: v1
kind: Service
metadata:
  name: sts-bond-mutator
  namespace: mongodb
spec:
  selector:
    name: sts-bond-mutator
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: sts-bond-mutator
  namespace: mongodb
webhooks:
  - name: sts-bond-mutator.jalder.dev
    failurePolicy: Ignore
    sideEffects: None
    timeoutSeconds: 5
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    namespaceSelector: {}
    objectSelector:
      matchLabels:
        sts-bond: "true"
    clientConfig:
      service:
        name: sts-bond-mutator
        namespace: mongodb
        path: "/mutate/sts-bond-distribution"
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrVENDQWVHZ0F3SUJBZ0lSQVB0WEN2c2ZqdnF0NnI3YTVpWlBIVVV3RFFZSktvWklodmNOQVFFTEJRQXcKRmpFVU1CSUdBMVVFQXhNTGFXNHRhRzkxYzJVdFkyRXdIaGNOTWpNd01UTXhNakl3TXpReFdoY05Namd3TVRNdwpNakl3TXpReFdqQVdNUlF3RWdZRFZRUURFd3RwYmkxb2IzVnpaUzFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCCkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU14K1UreEtvOXJIcGZmemMrTVJnYXhVV3lkWmp0cWtiUXRHaWx0NnNNYW0KS2VYdDlmSThKY1VlUnA3c3B5T0pKR0laQzNGVHA2bkFRT3ZVZmNiSTR6VEN6TWNsMVpkUDRoOGhMYS9IZVNHOQpOMERvN1pqZFNO [...]
    rules:
      - apiGroups:
          - "*"
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
        scope: "*"
        
###Cert Authority
#LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQyakNDQXNLZ0F3SUJBZ0lVV2tLWFJVcVhaZTczd091MzM3NlVjMVg0N3RFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dZUXhJVEFmQmdOVkJBWVRHRlZ1YVhSbFpDQlRkR0YwWlhNZ2IyWWdRVzFsY21sallURVFNQTRHQTFVRQpDQk1IU1c1a2FXRnVZVEVTTUJBR0ExVUVCeE1KVEdGbVlYbGxkSFJsTVJBd0RnWURWUVFLRXdkTmIyNW5iMFJDCk1SSXdFQVlEVlFRTEV3bFVVMFVnUVd4a1pYSXhFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13SGhjTk1qRXcKTlRJMk1UZ3pPVEF3V2hjTk1qWXdOVEkxTVRnek9UQXdXakNCaERFaE1COEdBMVVFQmhNWVZXNXBkR1ZrSUZOMApZWFJsY3lCdlppQkJiV1Z5YVdOaE1 [...]
